# Solid

./: .clang-format  .gitmodules  CMakeLists.txt
Sandbox/: CMakeLists.txt  SandboxApp.hpp  main.cpp
Solid/: CMakeLists.txt  Solid.hpp
Solid/Core/: AbstractWindow.hpp  Application.cpp  Application.hpp  Engine.cpp  Engine.hpp  KeyCode.hpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  MouseCode.hpp
Solid/Event/: ApplicationEvent.hpp  Event.hpp  EventDispatcher.hpp  KeyEvent.hpp  MouseEvent.hpp
Solid/Platform/Linux/: Window.cpp  Window.hpp
